compiler/testData/diagnostics/tests/generics/RecursiveUpperBoundWithTwoArguments.kt
// FIR_IDENTICAL
class D<A : D<A, <!UPPER_BOUND_VIOLATED!>String<!>>, B : D<A, B>>
